RegAligner Change History

*** upcoming release ***
- made some alternative word class modes available on command line
- removed debugging code for IBM-1 in gradient descent mode

*** release version 1.05 (released March 6 2013) ***
- two bugfixes for IBM-4
- major correction for word classes: now actually implementing the dependence
  of [Brown et al. 93]
- streamlining of the source code for IBM-3 and IBM-4

*** release version 1.02 (released on December 29 2012) ***
- improved Makefile (more compatible now)
- small fix for IBM-4 dev alignment computation
- restructured and added option -max-lookup <uint> to save memory (at the cost of run time)
- revised initialization of p0 for IBM-3/4 from HMM
- revised strategy for word classes in IBM-4 regarding run-time and memory

*** release version 1.0 (released on December 09 2012) ***
- parameterization of HMM now selectable on command line, plus added some variants
- added options to the IBM-3: 
  probability for empty word can now be fixed on command line, the original empty word of Brown et al. can be used
  and nonparametric distortion models can be used
- added options to the IBM-4:
  + (like in the IBM-3) probability for empty word can now be fixed and the original empty word of Brown et al. can be used
  + option to use a more deficient variant (according to Brown et al.)
- IBM-4 now implements word classes
- speed-up for Viterbi computation of HMM with reduced parameterization
- HMM Viterbi prob is now returned as a long double
- bugfix in count collection for IBM-4
- bugfix in m-step for parametric distortion in IBM-3, plus now using non-trivial initialization
- small bugfixes for HMM, plus extended Viterbi-mode
- improved some numerical issues
- added option -dont-print-energy to speed up computations (while reducing output information)

*** release version 0.92 (released on May 08 2012)
- can now specify a fertility limit for IBM-3/4
- improved speed of hillclimbing in IBM-4